# aegis_messenger

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/aegis-crypto/: Cargo.toml
crates/aegis-crypto/src/: aead.rs  error.rs  kdf.rs  kem.rs  lib.rs  random.rs  signatures.rs  types.rs
crates/aegis-protocol/: Cargo.toml
crates/aegis-protocol/src/: contact.rs  envelope.rs  error.rs  group.rs  handshake.rs  lib.rs  mls.rs  models.rs  session.rs
crates/aegis-server/: Cargo.toml
crates/aegis-server/src/: crypto.rs  error.rs  lib.rs  main.rs  routes.rs  state.rs
crates/aegis-transport/: Cargo.toml
crates/aegis-transport/src/: client.rs  error.rs  lib.rs
crates/aegis-vault/: Cargo.toml
crates/aegis-vault/src/: error.rs  lib.rs  vault.rs
desktop/: package-lock.json  package.json
desktop/src/: app.html
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs  vault_state.rs
desktop/src/lib/api/: backend.js
desktop/src/lib/stores/: app.js
desktop/src/lib/styles/: global.css
desktop/src/routes/: +page.svelte
docs/: CRYPTO_DESIGN.md  HARDWARE_KEY_DESIGN.md  LIMITATIONS.md  MASVS_CHECKLIST.md  SECURITY_ARCHITECTURE.md  SERVER_PRIVACY_MODEL.md  THREAT_MODEL.md
scripts/: build-linux.sh  build-macos.sh  build-windows.sh  run-server.sh
