[package]
name = "aegis-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Aegis Messenger — cryptographic primitives"
repository = "https://github.com/aegis-messenger/aegis"
keywords = ["cryptography", "aead", "xchacha20", "argon2", "post-quantum"]

[dependencies]
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
argon2 = "0.5"
hkdf = "0.12"
sha2 = "0.10"
blake3 = "1.5"
getrandom = "0.2"
ml-kem = { version = "0.2.3", features = ["zeroize"] }
zeroize = { version = "1.8", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
rand = "0.8"
base64 = "0.22"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
