[package]
name = "aegis-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Aegis Messenger — protocol types"
repository = "https://github.com/aegis-messenger/aegis"

[dependencies]
aegis-crypto = { path = "../aegis-crypto" }
openmls = { version = "0.8.1", optional = true }
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
rand = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"

[features]
default = []
openmls-backend = ["dep:openmls"]
