[package]
name = "aegis-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Aegis Messenger — minimal relay server"
repository = "https://github.com/aegis-messenger/aegis"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = "1"
sha2 = "0.10"
blake3 = "1.5"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4"] }
http = "1"
chrono = { version = "0.4", features = ["serde"] }
subtle = "2.5"
aegis-crypto = { path = "../aegis-crypto" }
aegis-protocol = { path = "../aegis-protocol" }
