[package]
name = "aegis-transport"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Aegis Messenger — transport layer"
repository = "https://github.com/aegis-messenger/aegis"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
url = "2.5"
tracing = "0.1"
base64 = "0.22"
aegis-crypto = { path = "../aegis-crypto" }
