[package]
name = "aegis-vault"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Aegis Messenger — local encrypted vault"
repository = "https://github.com/aegis-messenger/aegis"

[dependencies]
aegis-crypto = { path = "../aegis-crypto" }
aegis-protocol = { path = "../aegis-protocol" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5"

[target.'cfg(not(any(target_os = "ios", target_os = "android")))'.dependencies]
